chore: Refactor the repo to be Rust specific
These are just the first set of changes in order to have a Rust template
repo and there will be many more changes as I play with this.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,9 @@
+# TODO: @memes - update to match requirements
+# spell-checker: disable
 ---
 version: 2
 updates:
-  - package-ecosystem: "bundler"
+  - package-ecosystem: "cargo"
     directory: "/"
     schedule:
       interval: "weekly"
@@ -13,15 +15,7 @@ updates:
       interval: "weekly"
     reviewers:
       - memes
-  # TODO @memes - remove if not a go project
-  - package-ecosystem: "gomod"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-    reviewers:
-      - memes
-  # TODO @memes - remove if repo doesn't contain Terraform
-  - package-ecosystem: "terraform"
+  - package-ecosystem: "pip"
     directory: "/"
     schedule:
       interval: "weekly"
