--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -14,17 +14,15 @@ permissions:
 
 jobs:
   release-please:
-    # TODO @memes - enable release-please action as needed
+    # TODO: @memes - enable workflow
     if: false
     runs-on: ubuntu-latest
     steps:
       - name: Release Please
         uses: GoogleCloudPlatform/release-please-action@v4.0.2
         with:
-          # TODO @memes - make sure release-type and package-name are correct.
-          release-type: go
-          package-name: repo-template
-          # TODO @memes - If this is a go project, or if other actions are to be
-          # triggered by the result of this action, set token to a secret with
-          # a GitHub PAT as content.
-          # token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
+          config-file: release-please-config.json
+          manifest-file: .release-please-manifest.json
+          # TODO @memes - If other actions are not going to be triggered by the
+          # result of this action this can be removed.
+          token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
