--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,23 @@
 {
     "yaml.schemas": {
-        "https://json.schemastore.org/github-issue-config.json": ".github/ISSUE_TEMPLATE/config.yml",
-        "https://goreleaser.com/static/schema.json": ".goreleaser.yml"
-    }
+        "https://json.schemastore.org/github-issue-config.json": ".github/ISSUE_TEMPLATE/config.yml"
+    },
+    "workbench.colorCustomizations": {
+        "[Default Dark+]": {
+            "editorInlayHint.foreground": "#868686f0",
+            "editorInlayHint.background": "#3d3d3d48",
+            "editorInlayHint.typeForeground": "#fdb6fdf0",
+            "editorInlayHint.parameterForeground": "#fdb6fdf0"
+        }
+    },
+    "editor.semanticTokenColorCustomizations": {
+        "[Default Dark+]": {
+            "rules": {
+                "operator.unsafe": "#ff6600",
+                "function.unsafe": "#ff6600",
+                "method.unsafe": "#ff6600"
+            }
+        }
+    },
+    "rust-analyzer.cargo.buildScripts.enable": true
 }
