--- a/.gitignore
+++ b/.gitignore
@@ -3,17 +3,8 @@
 .direnv
 .tool-versions
 
-# Ignore generated Gorelease binaries
-dist/
+# Ignore generated binaries
+target/
 
-# Ignore Ruby
-.bundle
-Gemfile.lock
-
-# Ignore Terraform state and automatic var files - except examples
-.terraform
-.terraform.lock.hcl
-terraform.tfstate*
-*.auto.tfvars*
-terraform.tfvars*
-!terraform.tfvars.example
+# Ignore cargo locks
+Cargo.lock
