--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,18 +7,16 @@ repos:
     hooks:
       - id: yamllint
         files: \.(yml|yaml|talismanrc)$
-        types: [file, yaml]
+        types:
+          - file
+          - yaml
         entry: yamllint --strict
-  - repo: https://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.86.0
+  - repo: https://github.com/compilerla/conventional-pre-commit
+    rev: v3.0.0
     hooks:
-      - id: terraform_fmt
-      - id: terraform_docs
-        args: ['--args=--sort-by=required --hide=providers']
-  - repo: https://github.com/mattlqx/pre-commit-ruby
-    rev: v1.3.5
-    hooks:
-      - id: rubocop
+      - id: conventional-pre-commit
+        stages:
+          - commit-msg
   - repo: https://github.com/shellcheck-py/shellcheck-py
     rev: v0.9.0.6
     hooks:
@@ -28,8 +26,14 @@ repos:
     hooks:
       - id: check-executables-have-shebangs
       - id: check-merge-conflict
+      - id: check-toml
       - id: detect-private-key
       - id: end-of-file-fixer
+      # TODO: @memes - remove/modify if push to main is allowed
+      - id: no-commit-to-branch
+        args:
+          - -b
+          - main
       - id: trailing-whitespace
   - repo: https://github.com/thoughtworks/talisman
     rev: v1.31.0
