--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@
 # spell-checker:disable
 repos:
   - repo: https://github.com/adrienverge/yamllint
-    rev: v1.35.1
+    rev: v1.37.1
     hooks:
       - id: yamllint
         files: \.(yml|yaml|talismanrc)$
@@ -11,18 +11,18 @@ repos:
           - file
           - yaml
         entry: yamllint --strict
+  - repo: https://github.com/DavidAnson/markdownlint-cli2
+    rev: v0.18.1
+    hooks:
+      - id: markdownlint-cli2
   - repo: https://github.com/compilerla/conventional-pre-commit
-    rev: v4.0.0
+    rev: v4.3.0
     hooks:
       - id: conventional-pre-commit
         stages:
           - commit-msg
-  - repo: https://github.com/shellcheck-py/shellcheck-py
-    rev: v0.10.0.1
-    hooks:
-      - id: shellcheck
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
+    rev: v6.0.0
     hooks:
       - id: check-executables-have-shebangs
       - id: check-merge-conflict
@@ -36,6 +36,31 @@ repos:
           - main
       - id: trailing-whitespace
   - repo: https://github.com/thoughtworks/talisman
-    rev: v1.32.0
+    rev: v1.37.0
     hooks:
       - id: talisman-commit
+  - repo: local
+    hooks:
+      - id: clippy
+        name: clippy
+        entry: cargo clippy
+        args:
+          - --all
+          - --
+          - --deny
+          - warnings
+        language: system
+        types:
+          - rust
+        pass_filenames: false
+      - id: fmt
+        name: fmt
+        entry: cargo fmt
+        args:
+          - --all
+          - --
+          - --check
+        language: system
+        types:
+          - rust
+        pass_filenames: false
