--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,5 +1,7 @@
 {
+   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/refs/heads/main/schemas/config.json",
     "bump-minor-pre-major": true,
+    "bump-patch-for-minor-pre-major": false,
     "changelog-path": "CHANGELOG.md",
     "packages": {
         "placeholder": {}
